
0.9.9g Jan 16, 2005
 * made required, conflicts, and suggests into dynamically allocated strings
   for package objects, and upped their max size to 2048
 * inlined init_pkg()
 * added missing fclose() calls in read_rc_config() and read_head_cache()
 * added missing free for getline buffer in get_md5sum() and update_pkg_cache()
 * fixed exclude parsing regression, adding any trailing commas
 * added --compile script to FAQ, contributed by Piotr Simon
 * added missing free for tmp required_of_required_by pkg_list structure in
   required_by()
 * added missing free_regex() calls in parse_meta_entry()
 * deps of pkg that conflict are now set to remove just like when conflicts of
   requested pkg to install are detected
 * fixed bug where conflict of a dep might slip through and allow the requested
   package to successfully be installed
 * fixed segfault when cleaning up if EXCLUDE is not defined within slapt-getrc
 * removed bad use of strcspn() breaking using ROOT env var with slapt-get

0.9.9f Jan 12, 2005
 * all malloc and calloc calls are now wrapped in slapt_malloc and slapt_calloc
 * added a few missing free() calls, and a missing closedir() call in
   working_dir_init()
 * exclude now searches on package location, so you can exclude disk
   sets as well
 * rewrote "Why yet another package management tool for Slackware?" and
   "What about package dependencies?" in FAQ
 * added a 'Getting started' section to the README
 * misc code updates
 * if resume of pkg download is not supported by remote server or proxy,
   remove partial file and try again
 * ensured --remove-obsolete ignores excluded packages
 * updated translations
 * added --remove-obsolete option for dist-upgrade (see FAQ #9 and #28)
 * fixed bug in gen_short_pkg_description with installed packages that are
   missing a description, triggered by the new --search functionality looking
   at installed packages
 * added Vietnamese translation by vu nguyen (vncasper at yahoo dot com)