@@ -69,6 +69,7 @@ typedef struct {
 struct pkg_list {
 	pkg_info_t **pkgs;
 	unsigned int pkg_count;
+	bool free_pkgs;
 };
 
 typedef struct {
